--- a/index.html
+++ b/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html>
-   <head>
+    <head>
         <meta charset="utf-8">
         <title>심플포트폴리오</title>
-        <link href="css/reset.css" rel="stylesheet"
-        type="text/css"/>
-        <link href="css/style.css" rel="stylesheet"
-        type="text/css"/>        
-    
+        <link href="css/reset.css" rel="stylesheet" type="text/css"/>
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
+        <script src="js/jquery.1.12.4.js" type="text/javascript"></script>
+        <script src="plugins/bxslider/js/jquery.bxslider.js" ty="ty">
+            pe = "text/javascript" >
+        </script>
+        <link href="plugins/web-fonts-with-css/css/all.css" rel="stylesheet" type="text/css">
+        <script>
+            $(document).ready(function () {
+                $('.slider').bxSlider(
+                    {controls: false, pager: false, auto: true, pause: 5000, speed: 1500}
+                );
+            });
+        </script>
     </head>
     <body>
-        <div class="background"></div>
+        
+        <div class="overlay"></div>
+        <div class="slider">
+            <div class="background_01"></div>
+            <div class="background_02"></div>
+            <div class="background_03"></div>
+        </div>
+        <div class="contents">
+            <p class="contents_name">Won Piljae</p>
+            <p class="contents_job">Contact : <a href="dnjsvlfwo@gmail.com">dnjsvlfwo@gmail.com</a></p>
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com/piljae.won/" target="blank">
+                        <i class="fab fa-facebook fa-2x"></i></a>
+                </li>
+                <li>
+                    <a href="#" target="blank">
+                        <i class="fas fa-blog fa-2x"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/pillyyyyyyy/" target="blank">
+                        <i class="fab fa-instagram-square fa-2x"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/%ED%95%84%EC%9E%AC-%EC%9B%90-768b75155/" target="blank">
+                        <i class="fab fa-linkedin fa-2x"></i></a>
+                </li>
+            </ul>
+        </div>
     </body>
 </html>
